--- a/Tetri.html
+++ b/Tetri.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
+            background-color: #888;
             text-align: center;
         }
         
