--- a/Tetri.html
+++ b/Tetri.html
@@ -55,7 +55,7 @@
     </div>
     <a href="game.html" class="play-button">Play Now</a>
     <div class="footer">
-        <p>&copy; 2023 Your Company | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
+        <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a> | Email: christabel.onajite2005@gmail.com</p>
     </div>
 </body>
 </html>
