--- a/Tetri.html
+++ b/Tetri.html
@@ -5,8 +5,21 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #888;
+            background-color: darkgrey !important;
+            background-image: url('img.jpeg'); /* Path to the background image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             text-align: center;
+        }
+        .background-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+            z-index: -1;
         }
         
         h1 {
@@ -17,7 +30,7 @@
             width: 100px;
             height: 100px;
             margin: 20px auto;
-            background-image: url('tetris_logo.png');
+            background-image: url('static/img.jpeg');
             background-size: cover;
         }
         
@@ -55,7 +68,7 @@
     </div>
     <a href="game.html" class="play-button">Play Now</a>
     <div class="footer">
-        <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a> | Email: christabel.onajite2005@gmail.com</p>
+        <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
     </div>
 </body>
 </html>
