--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <a href="main.py" class="play-button">Play Now</a>
     <div class="footer">
-        <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
+        <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contacts/contact.html">Contact Us</a></p>
     </div>
 </body>
 </html>
