--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="description">
         <p>Tetris is a classic puzzle game where you need to arrange falling blocks called Tetriminos to form complete rows. Challenge yourself and see how high you can score!</p>
     </div>
-    <a href="app.py" class="play-button">Play Now</a>
+    <a href="/game" class="play-button">Play Now</a>
     <div class="footer">
         <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contacts/contact.html">Contact Us</a></p>
     </div>
