--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: darkgrey !important;
-            background-image: url('img.jpeg'); /* Path to the background image */
+            background-image: url('img.jpeg'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -18,7 +18,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+            background-color: rgba(0, 0, 0, 0.5); 
             z-index: -1;
         }
         
@@ -66,7 +66,7 @@
     <div class="description">
         <p>Tetris is a classic puzzle game where you need to arrange falling blocks called Tetriminos to form complete rows. Challenge yourself and see how high you can score!</p>
     </div>
-    <a href="game.html" class="play-button">Play Now</a>
+    <a href="main.py" class="play-button">Play Now</a>
     <div class="footer">
         <p>&copy; 2023 KRYSTALCODES | <a href="privacy.html">Privacy Policy</a> | <a href="contact.html">Contact Us</a></p>
     </div>
